// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<WorldPrice /> Default props amount and baseCurrency 1`] = `
<span
  title={undefined}
>
  $123
</span>
`;

exports[`<WorldPrice /> Default props only amount passed in 1`] = `
<span
  title={undefined}
>
  $123
</span>
`;

exports[`<WorldPrice /> Invalid inputs null amount returns empty string 1`] = `
<span
  title={undefined}
/>
`;

exports[`<WorldPrice /> Invalid inputs string returns original string 1`] = `
<span
  title={undefined}
>
  hello
</span>
`;

exports[`<WorldPrice /> Invalid inputs undefined amount returns empty string 1`] = `
<span
  title={undefined}
/>
`;

exports[`<WorldPrice /> Invalid inputs unsupported base currency returns original amount 1`] = `
<span
  title={undefined}
>
  987.234
</span>
`;

exports[`<WorldPrice /> Invalid inputs unsupported display currency returns original amount 1`] = `
<span
  title={undefined}
>
  987.234
</span>
`;
